AX: incorrect accessible name from multiple label elements https://bugs.webkit.org/show_bug.cgi?id=152663 rdar://problem/24033482

Reviewed by Chris Fleizach.

Per https://www.w3.org/TR/html-aam-1.0/#input-type-text-input-type-password-input-type-number-input-type-search-input-type-tel-input-type-email-input-type-url-and-textarea-element-accessible-name-computation:

> Otherwise use the associated label element(s) accessible name(s) - if more than one label is associated; concatenate by DOM order, delimited by spaces.

Prior to this patch, we only used accessible text from the first associated label element.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* LayoutTests/accessibility/multiple-label-input-expected.txt: Added.
* LayoutTests/accessibility/multiple-label-input.html: Added.
* LayoutTests/accessibility/title-ui-element-correctness-expected.txt:
* LayoutTests/accessibility/title-ui-element-correctness.html:
* LayoutTests/platform/ios/accessibility/multiple-label-input-expected.txt: Added.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::labelForNode):
(WebCore::AccessibilityNodeObject::checkboxOrRadioRect const):
(WebCore::AccessibilityNodeObject::correspondingLabelForControlElement const):
(WebCore::AccessibilityNodeObject::textForLabelElements const):
(WebCore::AccessibilityNodeObject::titleElementText const):
(WebCore::AccessibilityNodeObject::titleUIElement const):
(WebCore::AccessibilityNodeObject::exposesTitleUIElement const):
(WebCore::AccessibilityNodeObject::title const):
(WebCore::AccessibilityNodeObject::labelForElement const): Deleted.
(WebCore::AccessibilityNodeObject::textForLabelElement const): Deleted.
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
* Source/WebCore/accessibility/cocoa/AccessibilityObjectCocoa.mm:
(WebCore::AccessibilityObject::descriptionAttributeValue const):
(WebCore::AccessibilityObject::helpTextAttributeValue const):
* Source/WebCore/dom/TreeScope.cpp:
(WebCore::TreeScope::labelElementForId): Deleted.
* Source/WebCore/dom/TreeScope.h:
* Source/WebCore/dom/TreeScopeOrderedMap.cpp:
(WebCore:: const):
(WebCore::TreeScopeOrderedMap::getElementByLabelForAttribute const): Deleted.
* Source/WebCore/dom/TreeScopeOrderedMap.h:

Canonical link: https://commits.webkit.org/266151@main